--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -6,90 +6,97 @@
 	<div class="container">
 
 <!-- ============================ COMPONENT 1 ================================= -->
+{% if quantity > 0 %}
+	<div class="row">
+		<aside class="col-lg-9">
+	<div class="card">
+	<table class="table table-borderless table-shopping-cart">
+	<thead class="text-muted">
+	<tr class="small text-uppercase">
+	<th scope="col">Product</th>
+	<th scope="col" width="120">Quantity</th>
+	<th scope="col" width="120">Price</th>
+	<th scope="col" class="text-right" width="200"> </th>
+	</tr>
+	</thead>
+	<tbody>
+	{% for cart_items in cart_items %}
+	<tr>
+		<td>
+			<figure class="itemside align-items-center">
+				<div class="aside"><img src="{{ cart_items.product.images.url }}" class="img-sm"></div>
+				<figcaption class="info">
+					<a href="{{ cart_items.product.get_url }}" class="title text-dark">{{ cart_items.product.product_name }}</a>
+					<!-- <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p> -->
+				</figcaption>
+			</figure>
+		</td>
+		<td> 
+			<!-- col.// -->
+						<div class="col"> 
+							<div class="input-group input-spinner">
+								<div class="input-group-prepend">
+								<a href = "{% url 'remove_cart' cart_items.product.id%}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+								</div>
+								<input type="text" class="form-control"  value="{{ cart_items.quantity }}">
+								<div class="input-group-append">
+								<a href="{% url 'add_cart' cart_items.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+								</div>
+							</div> <!-- input-group.// -->
+						</div> <!-- col.// -->
+		</td>
+		<td> 
+			<div class="price-wrap"> 
+				<var class="price">{{ cart_items.sub_total }} $</var> 
+				<small class="text-muted"> ${{ cart_items.product.price }} each </small> 
+			</div> <!-- price-wrap .// -->
+		</td>
+		<td class="text-right"> 
+		<a href="{% url 'delete_cart' cart_items.product.id %}" class="btn btn-danger"> Remove </a>
+		</td>
+	</tr>
+	{% endfor %}
+	</tbody>
+	</table>
+	</div> <!-- card.// -->
 
-<div class="row">
-	<aside class="col-lg-9">
-<div class="card">
-<table class="table table-borderless table-shopping-cart">
-<thead class="text-muted">
-<tr class="small text-uppercase">
-  <th scope="col">Product</th>
-  <th scope="col" width="120">Quantity</th>
-  <th scope="col" width="120">Price</th>
-  <th scope="col" class="text-right" width="200"> </th>
-</tr>
-</thead>
-<tbody>
-{% for cart_items in cart_items %}
-<tr>
-	<td>
-		<figure class="itemside align-items-center">
-			<div class="aside"><img src="{{ cart_items.product.images.url }}" class="img-sm"></div>
-			<figcaption class="info">
-				<a href="#" class="title text-dark">{{ cart_items.product.product_name }}</a>
-				<!-- <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p> -->
-			</figcaption>
-		</figure>
-	</td>
-	<td> 
-		<!-- col.// -->
-					<div class="col"> 
-						<div class="input-group input-spinner">
-							<div class="input-group-prepend">
-							<a href = "{% url 'remove_cart' cart_items.product.id%}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
-							</div>
-							<input type="text" class="form-control"  value="{{ cart_items.quantity }}">
-							<div class="input-group-append">
-							<a href="{% url 'add_cart' cart_items.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
-							</div>
-						</div> <!-- input-group.// -->
-					</div> <!-- col.// -->
-	</td>
-	<td> 
-		<div class="price-wrap"> 
-			<var class="price">{{ cart_items.sub_total }} $</var> 
-			<small class="text-muted"> ${{ cart_items.product.price }} each </small> 
-		</div> <!-- price-wrap .// -->
-	</td>
-	<td class="text-right"> 
-	<a href="{% url 'delete_cart' cart_items.product.id %}" class="btn btn-danger"> Remove </a>
-	</td>
-</tr>
-{% endfor %}
-</tbody>
-</table>
-</div> <!-- card.// -->
+		</aside> <!-- col.// -->
+		<aside class="col-lg-3">
+
+			<div class="card">
+			<div class="card-body">
+				<dl class="dlist-align">
+				<dt>Total price:</dt>
+				<dd class="text-right">$ {{ total }} </dd>
+				</dl>
+				<dl class="dlist-align">
+				<dt>Tax:</dt>
+				<dd class="text-right"> $ {{tax}} </dd>
+				</dl>
+				<dl class="dlist-align">
+				<dt>Total:</dt>
+				<dd class="text-right text-dark b"><strong>$ {{grand_total}}</strong></dd>
+				</dl>
+				<hr>
+				<p class="text-center mb-3">
+					<img src="./images/misc/payments.png" height="26">
+				</p>
+				<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+				<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+			</div> <!-- card-body.// -->
+			</div> <!-- card.// -->
 
 	</aside> <!-- col.// -->
-	<aside class="col-lg-3">
-
-		<div class="card">
-		<div class="card-body">
-			<dl class="dlist-align">
-			  <dt>Total price:</dt>
-			  <dd class="text-right">$ {{ total }} </dd>
-			</dl>
-			<dl class="dlist-align">
-			  <dt>Tax:</dt>
-			  <dd class="text-right"> $ {{tax}} </dd>
-			</dl>
-			<dl class="dlist-align">
-			  <dt>Total:</dt>
-			  <dd class="text-right text-dark b"><strong>$ {{grand_total}}</strong></dd>
-			</dl>
-			<hr>
-			<p class="text-center mb-3">
-				<img src="./images/misc/payments.png" height="26">
-			</p>
-			<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-			<a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
-		</div> <!-- card-body.// -->
-		</div> <!-- card.// -->
-
-</aside> <!-- col.// -->
 
 
-</div> <!-- row.// -->
+	</div> <!-- row.// -->
+{% else %}
+	<h2 class = 'text-center'>Your cart is empty!</h2>
+	<br>
+	<div class="text-center">
+		<a class = "btn btn-primary" href="{% url 'store' %}">Continue Shopping</a>
+	</div>
+{% endif %}
 <!-- ============================ COMPONENT 1 END .// ================================= -->
 
 </div> <!-- container .//  -->
