--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -69,8 +69,11 @@
         <hr>
         {%if single_product.stock <= 0 %}
           <h5 style = "color:red;">Out of stock</h5>
-        {%else%}
-        <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+        {% elif in_cart == True %}
+          <a href="#" class="btn btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
+          <a href="{% url 'cart'%}" class="btn btn-primary"> <span class="text">View cart</span> <i class="fas float-md-right"></i>  </a>
+        {% elif single_product.stock >= 1 %}
+          <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
         {% endif %}
       </article> <!-- product-info-aside .// -->
             </main> <!-- col.// -->
