--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -6,8 +6,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
     <div class="container">
+        {% if 'search' in request.path %}
+        <h2 class="title-page">Search result</h2>
+        {% else %}
         <h2 class="title-page">Our Store</h2>
-        
+        {% endif %}
     </div> <!-- container //  -->
     </section>
     <!-- ========================= SECTION INTRO END// ========================= -->
@@ -126,6 +129,7 @@
     </header><!-- sect-heading -->
     
     <div class="row">
+    {%if products %}
         {% for product in products %}
         <div class="col-md-4">
             <figure class="card card-product-grid">
@@ -147,6 +151,9 @@
             </figure>
         </div> <!-- col.// -->
         {% endfor %}
+    {% else %}
+        <h2>No result found. Try again</h2>
+    {% endif %}
     </div> <!-- row end.// -->
     
     
