--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -27,7 +27,14 @@
 				<div class="aside"><img src="{{ cart_items.product.images.url }}" class="img-sm"></div>
 				<figcaption class="info">
 					<a href="{{ cart_items.product.get_url }}" class="title text-dark">{{ cart_items.product.product_name }}</a>
-					<!-- <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p> -->
+					<p class="text-muted small">
+						{% if cart_items.variations.all %}
+							{% for item in cart_items.variations.all %}
+								{{ item.variation_category | capfirst }} : {{ item.variation_value }}
+								<br>
+							{% endfor %}
+						{% endif %}
+					</p> 
 				</figcaption>
 			</figure>
 		</td>
@@ -36,12 +43,18 @@
 						<div class="col"> 
 							<div class="input-group input-spinner">
 								<div class="input-group-prepend">
-								<a href = "{% url 'remove_cart' cart_items.product.id%}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
-								</div>
+								<a href = "{% url 'remove_cart' cart_items.product.id cart_items.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+								</div> 
 								<input type="text" class="form-control"  value="{{ cart_items.quantity }}">
 								<div class="input-group-append">
-								<a href="{% url 'add_cart' cart_items.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
-								</div>
+								<form action="{% url 'add_cart' cart_items.product.id %}" method="POST" >
+									{% csrf_token %}
+									{% for item in cart_items.variations.all %}
+									<input type="hidden" name = "{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+									{% endfor %}
+									<button type = "submit" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+								</form>
+							</div>
 							</div> <!-- input-group.// -->
 						</div> <!-- col.// -->
 		</td>
@@ -52,7 +65,7 @@
 			</div> <!-- price-wrap .// -->
 		</td>
 		<td class="text-right"> 
-		<a href="{% url 'delete_cart' cart_items.product.id %}" class="btn btn-danger"> Remove </a>
+		<a href="{% url 'delete_cart' cart_items.product.id cart_items.id%}" class="btn btn-danger"> Remove </a>
 		</td>
 	</tr>
 	{% endfor %}
