--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,12 +9,14 @@
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           <div class="card-body">
           <h4 class="card-title mb-4">Sign in</h4>
-          <form>
+          {% include 'includes/alert.html' %}
+          <form action="{% url 'login' %}" method="post">
+            {% csrf_token %}
               <div class="form-group">
-                 <input type="email" class="form-control" placeholder="Email Address" >
+                 <input type="email" class="form-control" placeholder="Email Address" name = "email">
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" >
+                <input type="password" class="form-control" placeholder="Password" name = "password">
               </div> <!-- form-group// -->
               
               <div class="form-group">
@@ -22,7 +24,7 @@
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                  <button type="submit" class="btn btn-primary btn-block"> Login </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
