--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,6 +5,16 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+{% if request.GET.command == 'verification' %}
+
+<div class="container mx-auto alert-info text-center" role = "alert" style="max-width: 1024px; margin-top:100px;">
+  We have sent you a verification email to your email address [{{request.GET.email}}]
+  <br><br>
+  Already verified? <br> <a href="{% url 'login' %}" id="href">Click here</a>
+</div>
+
+{% else %}
+
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           <div class="card-body">
@@ -34,7 +44,7 @@
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
-    
+  {% endif %} 
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 
