--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -43,7 +43,7 @@
 						<div class="col"> 
 							<div class="input-group input-spinner">
 								<div class="input-group-prepend">
-								<a href = "{% url 'remove_cart' cart_items.product.id cart_items.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+								<a href = "{% url 'remove_cart' cart_items.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 								</div> 
 								<input type="text" class="form-control"  value="{{ cart_items.quantity }}">
 								<div class="input-group-append">
@@ -65,7 +65,7 @@
 			</div> <!-- price-wrap .// -->
 		</td>
 		<td class="text-right"> 
-		<a href="{% url 'delete_cart' cart_items.product.id cart_items.id%}" class="btn btn-danger"> Remove </a>
+		<a href="{% url 'delete_cart' cart_items.id%}" class="btn btn-danger"> Remove </a>
 		</td>
 	</tr>
 	{% endfor %}
@@ -94,7 +94,7 @@
 				<p class="text-center mb-3">
 					<img src="./images/misc/payments.png" height="26">
 				</p>
-				<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+				<a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
 				<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
 			</div> <!-- card-body.// -->
 			</div> <!-- card.// -->
